# end_to_end_commodities_price

./: .gitignore  README.md  pyproject.toml
commodities_dbt/: dbt_project.yml  profiles.yml
commodities_dbt/models/staging/: _sources.yml  stg_commodities.sql  stg_movimentacao_commodities.sql
src/: extract_load.py  settings.py
