[tool.poetry]
name = "end-to-end-commodities-price"
version = "0.1.0"
description = ""
authors = ["Victor Contreras <vgabriel@mslcorporate.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"
psycopg2-binary = "^2.9.10"
yfinance = "^0.2.51"
dbt-core = "^1.9.1"
dbt-postgres = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
